<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical|left|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="32sp" />

    <CheckBox
        android:id="@+id/ifUseGPRS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_mobile_net" />

    <CheckBox
        android:id="@+id/ifHD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifHD" />

    <CheckBox
        android:id="@+id/ifAutoDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoDoawnloadSong" />

    <CheckBox
        android:id="@+id/DownloadLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadLocation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_ok" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_cancle" />

    </LinearLayout>
  
</LinearLayout>